--- a/src/common/style/reset.less
+++ b/src/common/style/reset.less
@@ -8,3 +8,15 @@
   a{
     text-decoration: none;
   }
+  .my-bullet{
+    width: 5px;
+    height: 5px;
+    color: #fff;
+    border-radius: 50%;
+    border:1px solid #fff;
+    margin-right: 8px;
+    float: right;
+}
+.my-bullet-active{
+  background: #fff; 
+}
