--- a/src/common/style/variable.less
+++ b/src/common/style/variable.less
@@ -1,9 +1,9 @@
 // 文字颜色
 @bg:#222;
-
+@bg-black:#000;
 //字体颜色
 @fc-yellow:#FFCD32;
-
+@fc-grayopacity:rgba(255,255,255,.5);
 //字体尺寸
 @fs-xs:  12px;
 @fs-s:   14px;
